# Splendor

./: .gitignore  CMakeLists.txt
assets/: deck.csv
src/: Board.hpp  CMakeLists.txt  Game.hpp  Makefile  Pieces.hpp  Resources.cpp  Resources.hpp  Splendor.hpp  build.sh  load_cards.cpp  main  main.cpp
